Revert "Allow unsafe access for netty on jdk11 platform"
This reverts commit 8c2bdaeca54099b98bc4eef6c7ca4f84b1966622.

Signed-off-by: Peter Nied <peternied@hotmail.com>